[package]
name = "hackutd-ix-backend"
version = "0.1.0"
edition = "2021"

build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.147"
serde_json = "1.0.87"

[dependencies.sqlx]
version = "0.5"
default-features = true
features = ["macros", "postgres", "json", "migrate"]

[dependencies.rocket]
version = "0.5.0-rc.2"
features = ["json"]

[dependencies.rocket_db_pools]
version = "0.1.0-rc.2"
features = ["sqlx_postgres"]

[profile.dev.package.sqlx-macros]
opt-level = 3
